<resources>
    <string name="app_name">Curs Application</string>
    <string name="name_hint">Name</string>
    <string name="company_hint">Company</string>
    <string name="position_hint">Position</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="save_button_text">Save</string>
    <string-array name="templates_array">
        <item>Template 1</item>
        <item>Template 2</item>
        <item>Template 3</item>
    </string-array>
</resources>
